--- a/hw9.ipynb
+++ b/hw9.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Kopie von hw9(1).ipynb",
+      "name": "hw9.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -24,7 +24,7 @@
         "import tensorflow as tf\r\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -59,7 +59,7 @@
         "\r\n",
         "  return dataset"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
         "\r\n",
         "  return larger_sum"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -98,7 +98,7 @@
         "for elem in gen.take(1):\r\n",
         "  print(elem)"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
         "    #ouput the hidden state\r\n",
         "    return hidden_state, cell_state"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
         "    x = self.read_out(x)\r\n",
         "    return x"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "\r\n",
         "  return loss, accuracy"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
         "    # compute duration of an epoch\r\n",
         "    return round(time_per_training_step, 2)"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -287,7 +287,7 @@
         "  print(\"train_loss\", original_loss.numpy())\r\n",
         "  print(\"train accuracy\", original_acc)\r\n"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
       "source": [
         ""
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -350,7 +350,7 @@
         "plt.legend((line1,line2),(\"loss\",\"accuracy\"))\r\n",
         "plt.show()\r\n"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -373,7 +373,9 @@
         "id": "K2hEGXsH0Nmg"
       },
       "source": [
-        "We assume that it is slowly going to increase with every additional epoch (as seen in this trend), due to timing constraints we were not able to train it for a longer time."
+        "We assume that it is slowly going to increase with every additional epoch (as seen in this trend), due to timing constraints we were not able to train it for a longer time.\r\n",
+        "\r\n",
+        "We are pretty sure about our implementation but there might be a bug somewhere in the code anyway. After hours of debugging we feel that we have implemented the general idea and task and have thus completed it to the best of our abilities. "
       ]
     }
   ]
